--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>DEMO Page</title>
+  <meta name="description" content="A simple demo page for 8x8 APIs">
+  <meta name="author" content="Matt Rogers">
+
+  <meta property="og:title" content="A simple demo page for 8x8 APIs">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mlwrogers.github.io">
+  <meta property="og:description" content="A simple demo page for 8x8 APIs">
+  <meta property="og:image" content="8x8logo.png">
+
+  <link rel="icon" href="/8x8favicon.ico">
+  <link rel="icon" href="/8x8favicon.svg" type="image/svg+xml">
+  <!-- link rel="apple-touch-icon" href="/apple-touch-icon.png" -->
+
+  <!-- link rel="stylesheet" href="css/styles.css?v=1.0" -->
+
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hello World</h1>
+  <p>I'm hosted with GitHub Pages.</p>
+  <!-- your content here... -->
+  <!-- script src="js/scripts.js"></script> -->
 </body>
 </html>
