--- a/skunkworxpage.html
+++ b/skunkworxpage.html
@@ -124,7 +124,7 @@
 
 <!-- 8x8 Logo -->
 	<div id="about">
-		<p style="text-align:left;"><img src="./images/8x8-logo.png" alt="NOK" style="width:20%;height:20%;"></p>
+		<p style="text-align:center;"><img src="./images/8x8-logo.png" alt="NOK" style="width:20%;height:20%;"></p>
 	</div>
 
 <!-- 8x8 SMS API -->
