--- a/skunkworxpage.html
+++ b/skunkworxpage.html
@@ -94,8 +94,6 @@
     color: white;
 }
 
-
-
     .float{
 	position:fixed;
 	width:70px;
@@ -128,11 +126,9 @@
 	</div>
 
 <!-- 8x8 SMS API -->
-<!--
-	<div id="container">
-    <div id="sms">
+	<div id="sms" style="text-align: right;">
       <h3 style="font-family:verdana">8x8 SMS API</h3>
-      <small style="font-family:verdana">SEND SMS WITH THE 8X8 SMS API</small>
+      <small style="font-family:verdana">Send SMS with the 8X8 SMS API</small>
       <br>
       <form>
         <br>
@@ -157,8 +153,6 @@
         <button style="font-family:verdana" class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
       </form>
     </div>
-  </div>
--->
 
 <!-- Floating WhatsApp button -->
 <div id="myWa"></div>
@@ -174,27 +168,29 @@
 </script>
 
 <!-- WhatsApp Connect button -->
-<div style="text-align: center;">
+<div style="text-align: right;">
 <h2>WhatsApp Connect</h2>
 <button class="button button2" onclick="window.location.href='https://wa.me/6581968289?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 </div>
 
 <!-- WhatsApp Bot button -->
-<div style="text-align: center;">
+<div style="text-align: right;">
 <h2>WhatsApp Bot</h2>
 <button class="button button3" onclick="window.location.href='https://wa.me/6562218849?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 </div>
 
 <!-- WhatsApp Support button -->
-<div style="text-align: center;">
+<div style="text-align: right;">
 <h2>WhatsApp Support</h2>
+<small>(Converse)</small>
 <button class="button button2" onclick="window.location.href='https://wa.me/639216812646?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 </div>
 
 <!-- Viber Button -->
-<div style="text-align: center;">
+<div style="text-align: right;">
 <h2>Viber Support</h2>
-<button class="button button4" onclick="window.location.href='viber://chat?service=19459'">Contact Viber</button>
+<small>(Converse)</small>
+<button class="button button4" onclick="window.location.href='viber://chat?service=19459'">Contact us</button>
 </div>
 
 <!-- ZALO Section
