--- a/skunkworxpage.html
+++ b/skunkworxpage.html
@@ -126,7 +126,9 @@
 	</div>
 
 <!-- 8x8 SMS API -->
-	<div id="sms" style="text-align: right;">
+<!--
+<div id="container">
+	<div id="sms" style="text-align: left;">
       <h3 style="font-family:verdana">8x8 SMS API</h3>
       <small style="font-family:verdana">Send SMS with the 8X8 SMS API</small>
       <br>
@@ -153,6 +155,8 @@
         <button style="font-family:verdana" class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
       </form>
     </div>
+	</div>
+-->
 
 <!-- Floating WhatsApp button -->
 <div id="myWa"></div>
@@ -168,28 +172,28 @@
 </script>
 
 <!-- WhatsApp Connect button -->
-<div style="text-align: right;">
+<div style="text-align: center;">
 <h2>WhatsApp Connect</h2>
 <button class="button button2" onclick="window.location.href='https://wa.me/6581968289?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 </div>
 
 <!-- WhatsApp Bot button -->
-<div style="text-align: right;">
+<div style="text-align: center;">
 <h2>WhatsApp Bot</h2>
 <button class="button button3" onclick="window.location.href='https://wa.me/6562218849?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 </div>
 
 <!-- WhatsApp Support button -->
-<div style="text-align: right;">
+<div style="text-align: center;">
 <h2>WhatsApp Support</h2>
-<small>(Converse)</small>
+<small>(Converse)</small><br>
 <button class="button button2" onclick="window.location.href='https://wa.me/639216812646?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 </div>
 
 <!-- Viber Button -->
-<div style="text-align: right;">
+<div style="text-align: center;">
 <h2>Viber Support</h2>
-<small>(Converse)</small>
+<small>(Converse)</small><br>
 <button class="button button4" onclick="window.location.href='viber://chat?service=19459'">Contact us</button>
 </div>
 
