--- a/skunkworxpage.html
+++ b/skunkworxpage.html
@@ -185,21 +185,21 @@
 
 <!-- WhatsApp into converse -->
 <div style="text-align: center;">
-	<h2>WhatsApp - chat with an agent</h2>
+	<h2>Chat with us on WhatsApp</h2>
 	<button class="button button2" onclick="window.location.href='https://wa.me/6569507977?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 	<br><br><br>
 </div>
 
 <!-- Viber into converse -->
 <div style="text-align: center;">
-	<h2>Viber - chat with an agent</h2>
+	<h2>Chat with us on Viber</h2>
 	<button class="button button4" onclick="window.location.href='viber://chat?service=19459'">Contact us</button>
 	<br><br><br>
 </div>
 
 <!-- WhatsApp into Zendesk integration -->
 <div style="text-align: center;">
-	<h2>WhatsApp - log a support ticket</h2>
+	<h2>Create ticket using WhatsApp</h2>
 	<button class="button button2" onclick="window.location.href='https://wa.me/639216812646?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
 	<br><br><br>
 </div>
