--- a/skunkworxpage.html
+++ b/skunkworxpage.html
@@ -204,6 +204,14 @@
 	<br><br><br>
 </div>
 
+<!-- SMS into converse -->
+<div style="text-align: center;">
+	<h2>Chat with us on SMS</h2>
+	<button class="button button3" onclick="window.location.href='sms://6569507977?text=Hi%2C+I+need+support.+Could+you+assist+me%3F'">Contact us</button>
+	<br><br><br>
+</div>
+
+
 <!-- ZALO Section
 	<div style="text-align: center;">
 <h2>WhatsApp QR code</h2>
