--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>DEMO Page</title>
-  <meta name="description" content="A simple demo page for 8x8 APIs">
+  <title>Hints, Tips, demos and code Page</title>
+  <meta name="description" content="Hints, Tips, demos and code">
   <meta name="author" content="Matt Rogers">
 
-  <meta property="og:title" content="A simple demo page for 8x8 APIs">
+  <meta property="og:title" content="Hints, Tips, demos and code">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mlwrogers.github.io">
-  <meta property="og:description" content="A simple demo page for 8x8 APIs">
+  <meta property="og:description" content="Hints, Tips, demos and code">
   <meta property="og:image" content="8x8logo.png">
 
   <link rel="icon" href="/8x8favicon.ico">
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+  <h1>Hints, Tips, demos and code</h1>
+  <p>GitHub Pages is most excellent.</p>
   <!-- your content here... -->
   <!-- script src="js/scripts.js"></script> -->
 </body>
