--- a/skunkworxpage.html
+++ b/skunkworxpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>8x8 - API Guy Demo Page</title>
+	<title>8x8 - API Guy Quick Demo Page</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
